# GateKeeper

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-services.yml  frontend.yml  rust-build.yml
backend/: Cargo.toml  Dockerfile  docker-compose.release.yml
backend/src/: main.rs
backend/src/config/: mod.rs  postgresql.rs  redis.rs
backend/src/middlewares/: admin_validator.rs  api_key_validator.rs  api_usage_logger.rs  mod.rs  rate_limiter.rs
backend/src/models/: api_usage.rs  mod.rs
backend/src/routes/: auth.rs  health_check.rs  mod.rs  user.rs
backend/src/routes/api/: mod.rs
backend/src/routes/api/graphql/: mod.rs  schema.rs  setup.rs
backend/src/routes/api/v1/: mod.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Login.vue  Register.vue
frontend/src/router/: index.js
frontend/src/views/: Admin.vue  Home.vue
src/: main.rs
src/middlewares/: admin_validator.rs  api_key_validator.rs  api_usage_logger.rs  jwt_validator.rs  simple_logger.rs
src/models/: api_usage.rs
src/routes/: auth.rs  user.rs
src/routes/api/: get_random_number.rs
src/utils/: jwt.rs
