[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
uuid = "1.11.0"
futures = "0.3.31"
rand = "0.8.5"
argon2 = "0.6.0-pre.1"
regex = "1.11.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
time = { version = "0.3.36", features = ["serde"] }
serde_with = "3.11.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
tokio = { version = "1.41.1", features = ["full"] }